--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div id="title">Bar Chart</div>
   <div id="canvas">
     <div class="bars"></div>
+    <div class="bars"></div>
   </div>
 
   
