Wrote HTML form to recieve user preference for 'Bar Width' and made 'Generate Chart' submit button functional.

--- a/index.html
+++ b/index.html
@@ -31,18 +31,16 @@
       <!-- Submit Button -->
       <div>
         <button type="reset">Reset</button>
-        <button type="submit">Submit</button>
+        <button type="submit">Generate Chart</button>
       </div>
     </form>
 
 
   </div>
 
+  <!-- canvas -->
   <div id="title">Bar Chart</div>
-  <div id="canvas">
-    <div class="bars"></div>
-    <div class="bars"></div>
-  </div>
+  <div id="canvas"></div>
 
   
   <script src="app.js"></script>
