Added an input button to dynamically add input fields to get bar heigh input from user

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
       <!-- Bar Color -->
       <label for="barColor">Bar Color:</label>
       <input type="color" name="barColor" id="barColor">
+      <!-- Add Bar Height input field button -->
+      <div>
+        <label for="addField">Add Bar:</label>
+        <input type="button" id="addField" value="+" onclick="addTextField();">
+        <div id="barHeightFields"></div>
+      </div>
       <!-- Submit Button -->
       <div>
         <button type="reset">Reset</button>
