Made title editable onclick. Fixed div block spacing to fit everything in 100vh.

--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
   </div>
 
   <!-- canvas -->
-  <div id="title">Bar Chart</div>
+  <div contenteditable="true" onkeydown="enterBlur();" id="title">Click to edit title</div>
   <div id="canvas"></div>
-
   
   <script src="app.js"></script>
 </body>
