Added radio buttons to set where to display the value of each bar top, center, or bottom, relative to the parent bar.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
         <label for="barColor">Bar Color:</label>
         <input type="color" name="barColor" id="barColor">
       </div>
+      <!-- Bar Height Position -->
+      <div>
+        <p>Bar Value Position:</p>
+        <label for="top">Top:</label>
+        <input type="radio" name="valPos" id="top" value="top" checked>
+        <label for="center">Center:</label>
+        <input type="radio" name="valPos" id="center" value="center">
+        <label for="bottom">Bottom:</label>
+        <input type="radio" name="valPos" id="bottom" value="bottom">
+      </div>
       <!-- Add Bar Height input field button -->
       <div>
         <label for="addField">Add Bar:</label>
